# real_trans

./: AUDIO_DEVICE_GUIDE.md  Cargo.toml  ENVIRONMENT_NOTES.md  README.md  SUMMARY.md  TROUBLESHOOTING.md  build.sh  download_models.sh  integration_demo.rs  spec.md  translated_output.raw
bins/: integration_test.rs  test_runner.rs
examples/: conference_translator_demo.rs  debug_physical_input_test.rs  full_demo.rs  full_duplex_demo.rs  integration_demo.rs  list_audio_devices.rs  module_tests_runner.rs  simple_demo.rs
examples/module_tests/: full_integration_test.rs  input_test.rs  input_with_translation_test.rs  mod.rs  output_test.rs
memory/: 2024-12-18.md
src/: audio_switchboard.rs  audio_types.rs  bidirectional_translator.rs  lib.rs  main.rs  virtual_audio_manager.rs
src/core/: ring_buffer.rs
src/engine/: asr.rs  mod.rs  model_loader.rs  mt.rs  real_asr.rs  real_mt.rs  real_vad.rs  translation_pipeline.rs  tts.rs  vad.rs
src/io/: audio_capture.rs  audio_device.rs  mod.rs  physical_audio_device.rs  physical_device.rs  virtual_audio_device.rs
src/tests/: audio_simulation.rs  mod.rs
