[package]
name = "real_trans"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
thiserror = "1.0.58"
lazy_static = "1.4.0"

[dev-dependencies]
tokio-test = "0.4.4"