[package]
name = "real_trans"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_test"
path = "bins/simple_test.rs"

[[bin]]
name = "integration_test"
path = "bins/integration_test.rs"

[[bin]]
name = "test_runner"
path = "bins/test_runner.rs"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

[[example]]
name = "integration_demo"
path = "examples/integration_demo.rs"

[[example]]
name = "full_demo"
path = "examples/full_demo.rs"

[[example]]
name = "conference_translator_demo"
path = "examples/conference_translator_demo.rs"

[dependencies]
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
thiserror = "1.0.58"
lazy_static = "1.4.0"

[dev-dependencies]
tokio-test = "0.4.4"