[package]
name = "real_trans"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_test"
path = "bins/simple_test.rs"

[[bin]]
name = "integration_test"
path = "bins/integration_test.rs"

[[bin]]
name = "test_runner"
path = "bins/test_runner.rs"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

[[example]]
name = "integration_demo"
path = "examples/integration_demo.rs"

[[example]]
name = "full_demo"
path = "examples/full_demo.rs"

[[example]]
name = "conference_translator_demo"
path = "examples/conference_translator_demo.rs"

[[example]]
name = "full_duplex_demo"
path = "examples/full_duplex_demo.rs"

[[example]]
name = "input_test"
path = "examples/module_tests/input_test.rs"

[[example]]
name = "input_with_translation_test"
path = "examples/module_tests/input_with_translation_test.rs"

[[example]]
name = "output_test"
path = "examples/module_tests/output_test.rs"

[[example]]
name = "full_integration_test"
path = "examples/module_tests/full_integration_test.rs"

[[example]]
name = "module_tests_runner"
path = "examples/module_tests_runner.rs"

[[example]]
name = "list_audio_devices"
path = "examples/list_audio_devices.rs"

[dependencies]
tokio = { version = "1.20", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
thiserror = "1.0.58"
lazy_static = "1.4.0"
cpal = "0.15"

[dev-dependencies]
tokio-test = "0.4.4"